@@ -1,0 +1,5 @@
+t_env.o
+../env.a
+../alloc.a
+../str.a
+../bin.a
