@@ -28,31 +28,31 @@ int main()
   if (fd == -1) { perror("open"); return 2; }
 
   s = seek_start(fd);
-  if (s != 0) { printf("(1) seek_start: s == %lld\n", s); return 1; }
+  if (s != 0) { printf("(1) seek_start: s == %ld\n", s); return 1; }
 
   s = seek_cur(fd, 4);
-  if (s != 4) { printf("(2) seek_cur: s == %lld\n", s); return 1; }
+  if (s != 4) { printf("(2) seek_cur: s == %ld\n", s); return 1; }
   readchar(fd, &c);
   if (c != 'O') { printf("(3) seek_cur: c == %c\n", c); return 1; }
 
   s = seek_start(fd);
-  if (s != 0) { printf("(4) seek_start: s == %lld\n", s); return 1; }
+  if (s != 0) { printf("(4) seek_start: s == %ld\n", s); return 1; }
 
   s = seek_pos(fd, 8);
-  if (s != 8) { printf("(5) seek_pos: s == %lld\n", s); return 1; }
+  if (s != 8) { printf("(5) seek_pos: s == %ld\n", s); return 1; }
   readchar(fd, &c);
   if (c != 'T') { printf("(6) seek_pos: c == %c\n", c); return 1; }
  
   if (fstat(fd, &sb) == -1) { perror("fstat"); return 2; }
   s = seek_end(fd);
   if (s != sb.st_size) {
-    printf("(7) seek_end: s == %lld expected %lld\n", s, (sb.st_size));
+    printf("(7) seek_end: s == %ld expected %ld\n", s, (sb.st_size));
     return 1;
   }
  
   s = seek_cur(fd, -2);
   if (s != (sb.st_size - 2)) {
-    printf("(9) seek_cur: s == %lld expected %lld\n", s, (sb.st_size - 2));
+    printf("(9) seek_cur: s == %ld expected %ld\n", s, (sb.st_size - 2));
     return 1;
   }
   readchar(fd, &c);
